@@ -3,9 +3,11 @@ package com.jrmall.pilates.system.service.impl;
 import cn.hutool.core.collection.CollectionUtil;
 import cn.hutool.core.util.StrUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.update.LambdaUpdateWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import com.jrmall.pilates.common.base.Option;
 import com.jrmall.pilates.common.constant.SystemConstants;
+import com.jrmall.pilates.common.dubbo.util.RpcUtil;
 import com.jrmall.pilates.common.enums.StatusEnum;
 import com.jrmall.pilates.system.converter.DeptConverter;
 import com.jrmall.pilates.system.mapper.SysDeptMapper;
@@ -16,8 +18,10 @@ import com.jrmall.pilates.system.model.vo.DeptVO;
 import com.jrmall.pilates.system.service.SysDeptService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.util.Assert;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -36,10 +40,10 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
     private final DeptConverter deptConverter;
 
     /**
-     * 部门列表
+     * 获取部门列表
      */
     @Override
-    public List<DeptVO> listDepartments(DeptQuery queryParams) {
+    public List<DeptVO> getDeptList(DeptQuery queryParams) {
         // 查询参数
         String keywords = queryParams.getKeywords();
         Integer status = queryParams.getStatus();
@@ -52,39 +56,43 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
                         .orderByAsc(SysDept::getSort)
         );
 
+        if (CollectionUtil.isEmpty(deptList)) {
+            return Collections.emptyList();
+        }
+
+        // 获取所有部门ID
         Set<Long> deptIds = deptList.stream()
                 .map(SysDept::getId)
                 .collect(Collectors.toSet());
-
+        // 获取父节点ID
         Set<Long> parentIds = deptList.stream()
                 .map(SysDept::getParentId)
                 .collect(Collectors.toSet());
-
+        // 获取根节点ID（递归的起点），即父节点ID中不包含在部门ID中的节点，注意这里不能拿顶级部门 O 作为根节点，因为部门筛选的时候 O 会被过滤掉
         List<Long> rootIds = CollectionUtil.subtractToList(parentIds, deptIds);
 
-        List<DeptVO> list = new ArrayList<>();
-        for (Long rootId : rootIds) {
-            list.addAll(recurDeptList(rootId, deptList));
-        }
-        return list;
+        // 递归生成部门树形列表
+        return rootIds.stream()
+                .flatMap(rootId -> recurDeptList(rootId, deptList).stream())
+                .toList();
     }
 
     /**
      * 递归生成部门树形列表
      *
-     * @param parentId
-     * @param deptList
-     * @return
+     * @param parentId 父ID
+     * @param deptList 部门列表
+     * @return 部门树形列表
      */
     public List<DeptVO> recurDeptList(Long parentId, List<SysDept> deptList) {
         return deptList.stream()
                 .filter(dept -> dept.getParentId().equals(parentId))
                 .map(dept -> {
-                    DeptVO deptVO = deptConverter.entity2Vo(dept);
+                    DeptVO deptVO = deptConverter.toVo(dept);
                     List<DeptVO> children = recurDeptList(dept.getId(), deptList);
                     deptVO.setChildren(children);
                     return deptVO;
-                }).collect(Collectors.toList());
+                }).toList();
     }
 
     /**
@@ -100,57 +108,112 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
                 .select(SysDept::getId, SysDept::getParentId, SysDept::getName)
                 .orderByAsc(SysDept::getSort)
         );
-
-        Set<Long> parentIds = deptList.stream()
-                .map(SysDept::getParentId)
-                .collect(Collectors.toSet());
+        if (CollectionUtil.isEmpty(deptList)) {
+            return Collections.EMPTY_LIST;
+        }
 
         Set<Long> deptIds = deptList.stream()
                 .map(SysDept::getId)
                 .collect(Collectors.toSet());
 
+        Set<Long> parentIds = deptList.stream()
+                .map(SysDept::getParentId)
+                .collect(Collectors.toSet());
+
         List<Long> rootIds = CollectionUtil.subtractToList(parentIds, deptIds);
 
-        List<Option<Long>> list = new ArrayList<>();
-        for (Long rootId : rootIds) {
-            list.addAll(recurDeptTreeOptions(rootId, deptList));
-        }
-        return list;
+        // 递归生成部门树形列表
+        return rootIds.stream()
+                .flatMap(rootId -> recurDeptTreeOptions(rootId, deptList).stream())
+                .toList();
     }
 
+    /**
+     * 新增部门
+     *
+     * @param formData 部门表单
+     * @return 部门ID
+     */
     @Override
     public Long saveDept(DeptForm formData) {
-        SysDept entity = deptConverter.form2Entity(formData);
-        // 部门路径
+        // 校验部门名称是否存在
+        String code = formData.getCode();
+        long count = this.count(new LambdaQueryWrapper<SysDept>()
+                .eq(SysDept::getCode, code)
+        );
+        Assert.isTrue(count == 0, "部门编号已存在");
+
+        // form->entity
+        SysDept entity = deptConverter.toEntity(formData);
+
+        // 生成部门路径(tree_path)，格式：父节点tree_path + , + 父节点ID，用于删除部门时级联删除子部门
         String treePath = generateDeptTreePath(formData.getParentId());
         entity.setTreePath(treePath);
+
+        entity.setCreateBy(RpcUtil.getUserId());
         // 保存部门并返回部门ID
-        this.save(entity);
+        boolean result = this.save(entity);
+        Assert.isTrue(result, "部门保存失败");
+
         return entity.getId();
     }
 
+
+    /**
+     * 获取部门表单
+     *
+     * @param deptId 部门ID
+     * @return 部门表单对象
+     */
+    @Override
+    public DeptForm getDeptForm(Long deptId) {
+        SysDept entity = this.getById(deptId);
+        return deptConverter.toForm(entity);
+    }
+
+
+    /**
+     * 更新部门
+     *
+     * @param deptId   部门ID
+     * @param formData 部门表单
+     * @return 部门ID
+     */
     @Override
     public Long updateDept(Long deptId, DeptForm formData) {
+        // 校验部门名称/部门编号是否存在
+        String code = formData.getCode();
+        long count = this.count(new LambdaQueryWrapper<SysDept>()
+                .ne(SysDept::getId, deptId)
+                .eq(SysDept::getCode, code)
+        );
+        Assert.isTrue(count == 0, "部门编号已存在");
+
+
         // form->entity
-        SysDept entity = deptConverter.form2Entity(formData);
+        SysDept entity = deptConverter.toEntity(formData);
         entity.setId(deptId);
-        // 部门路径
+
+        // 生成部门路径(tree_path)，格式：父节点tree_path + , + 父节点ID，用于删除部门时级联删除子部门
         String treePath = generateDeptTreePath(formData.getParentId());
         entity.setTreePath(treePath);
+
         // 保存部门并返回部门ID
-        this.updateById(entity);
+        boolean result = this.updateById(entity);
+        Assert.isTrue(result, "部门更新失败");
+
         return entity.getId();
     }
 
     /**
      * 递归生成部门表格层级列表
      *
-     * @param parentId
-     * @param deptList
-     * @return
+     * @param parentId 父ID
+     * @param deptList 部门列表
+     * @return 部门表格层级列表
      */
     public static List<Option<Long>> recurDeptTreeOptions(long parentId, List<SysDept> deptList) {
-        List<Option<Long>> list = CollectionUtil.emptyIfNull(deptList).stream()
+        return CollectionUtil.emptyIfNull(deptList).stream()
                 .filter(dept -> dept.getParentId().equals(parentId))
                 .map(dept -> {
                     Option<Long> option = new Option<>(dept.getId(), dept.getName());
@@ -161,7 +224,6 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
                     return option;
                 })
                 .collect(Collectors.toList());
-        return list;
     }
 
 
@@ -169,7 +231,7 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
      * 删除部门
      *
      * @param ids 部门ID，多个以英文逗号,拼接字符串
-     * @return
+     * @return 是否删除成功
      */
     @Override
     public boolean deleteByIds(String ids) {
@@ -177,35 +239,16 @@ public class SysDeptServiceImpl extends ServiceImpl<SysDeptMapper, SysDept> impl
         if (StrUtil.isNotBlank(ids)) {
             String[] menuIds = ids.split(",");
             for (String deptId : menuIds) {
-                this.remove(new LambdaQueryWrapper<SysDept>()
+                this.update(new LambdaUpdateWrapper<SysDept>()
                         .eq(SysDept::getId, deptId)
                         .or()
-                        .apply("CONCAT (',',tree_path,',') LIKE CONCAT('%,',{0},',%')", deptId));
+                        .apply("CONCAT (',',tree_path,',') LIKE CONCAT('%,',{0},',%')", deptId)
+                        .set(SysDept::getIsDeleted, 1)
+                        .set(SysDept::getUpdateBy, RpcUtil.getUserId())
+                );
             }
         }
         return true;
-    }
-
-    /**
-     * 获取部门详情
-     *
-     * @param deptId
-     * @return
-     */
-    @Override
-    public DeptForm getDeptForm(Long deptId) {
-
-        SysDept entity = this.getOne(new LambdaQueryWrapper<SysDept>()
-                .eq(SysDept::getId, deptId)
-                .select(
-                        SysDept::getId,
-                        SysDept::getName,
-                        SysDept::getParentId,
-                        SysDept::getStatus,
-                        SysDept::getSort
-                ));
-
-        return deptConverter.entity2Form(entity);
     }
 
 
